app settings update, sql database cleanup, nuget install

--- a/MonsterHotel/appsettings.json
+++ b/MonsterHotel/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost\\SQLExpress;database=MonsterHotel;integrated security=true;"
+  },
+  "_comment": "Google says there's nothing scary about exposing the firebase projectId so...",
+  "FirebaseProjectId": "monsterhotel-23566"
 }
